2008-11-06  Alan McGovern  <amcgovern@novell.com>

	



2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>

	* Makefile.in:
	* AssemblyInfo.cs:
	* AssemblyInfo.cs.in:
	* MonoTorrent.Dht/DhtEngine.cs:
	* MonoTorrent.Dht/Listeners/UdpListener.cs:
	* MonoTorrent.Dht/Messages/Responses/GetPeersResponse.cs: Fix a lot of
	build warnings

2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>

	



2008-06-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* AssemblyInfo.cs: Added missing 'InternalsVisibleTo' attribute.

2008-06-05  Alan McGovern <alan.mcgovern@gmail.com> 

	* Makefile.in, MonoTorrent.csproj, Makefile.am: Rename from
	  EncryptionTypes.None -> EncryptionTypes.PlainText

2008-05-31  Alan McGovern <alan.mcgovern@gmail.com> 

	* MonoTorrent.csproj, Makefile.in, Makefile.am: Fixed up the build

2007-06-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* Client/Managers/TorrentManager.cs:
		Enhancement: Now the PieceHashed events are firing immediately when
				a piece is hashed.
		Bugfix: Torrent now starts correctly when fast resume data isn't available



2007-06-12  Alan McGovern <alan.mcgovern@gmail.com> 

	* Client/Managers/ConnectionManager.cs: Fixed up the code and removed
	  the warning.

2007-06-12  Alan McGovern <alan.mcgovern@gmail.com> 

	* Client/RateLimiter.cs: Fixed typo where i was using the wrong
	  variable when calculating the increaseAmount. Should have more
	  stable rate control now.
	* Client/Encryption/RC4.cs: Key is never used, commented it out
	* Client/Managers/ConnectionManager.cs: Commented out unused variables

2007-06-12  Alan McGovern <alan.mcgovern@gmail.com> 

	Removed typo

2007-05-31  Alan McGovern <alan.mcgovern@gmail.com> 

	* Collections/BEncodedKeyValuePair.cs: Added #regions

2007-05-31  Alan McGovern <alan.mcgovern@gmail.com> 

	* Collections/BEncodedKeyValuePair.cs: Added #regions
