@@ -1,3 +1,8 @@
+2009-01-17  Alan McGovern  <amcgovern@novell.com>
+
+	* TimeoutDispatcher.cs: Add TimeoutDispatcher locally and update build
+	files
+
 2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
 
 	* TorrentCreator.cs: Fix the multi-file torrent test. Add a new
