@@ -1,3 +1,9 @@
+2009-01-17  Alan McGovern  <amcgovern@novell.com>
+
+	* Makefile.am:
+	* MonoTorrent.csproj: Add TimeoutDispatcher locally and update build
+	files
+
 2008-11-06  Alan McGovern  <amcgovern@novell.com>
 
 	
